[gd_scene load_steps=8 format=3 uid="uid://bya63mfapts6i"]

[ext_resource type="Script" uid="uid://c4ysyu8bsycm2" path="res://Scripts/music_playlist.gd" id="1_haxuc"]
[ext_resource type="FontFile" uid="uid://0tvkbhwqas0" path="res://Font/Jersey10-Regular.ttf" id="2_6g602"]
[ext_resource type="Texture2D" uid="uid://cnb65ac0kqje8" path="res://Textures/Sprout Lands - UI Pack - Basic pack/Sprite sheets/Sprite sheet for Basic Pack.png" id="2_ypnw8"]
[ext_resource type="AudioStream" uid="uid://dgv6kihqgq3qw" path="res://Sounds/music/combat_1.mp3" id="3_0bk86"]

[sub_resource type="FontFile" id="FontFile_ypnw8"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tnj0h"]
texture = ExtResource("2_ypnw8")
region_rect = Rect2(275, 212, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r0b1q"]
texture = ExtResource("2_ypnw8")
region_rect = Rect2(275, 178, 90, 27)

[node name="MusicPlaylist" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_haxuc")

[node name="BackgroundTiles" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ypnw8")
region_rect = Rect2(462, 139, 5, 5)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 32.0
offset_right = 561.0
offset_bottom = 102.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6g602")
theme_override_font_sizes/font_size = 64
text = "PLAYLIST MUSICALE (ost)"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.025
anchor_bottom = 0.104
offset_left = 72.0
offset_top = 128.0
offset_right = 592.0
offset_bottom = 911.68

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 448.0
offset_right = 1856.0
offset_bottom = 522.0
theme_override_fonts/font = ExtResource("2_6g602")
theme_override_font_sizes/font_size = 64

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0bk86")
autoplay = true
max_distance = 1e+07

[node name="ActualTime" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 712.0
offset_top = 416.0
offset_right = 765.0
offset_bottom = 451.0
theme_override_fonts/font = ExtResource("2_6g602")
theme_override_font_sizes/font_size = 32
text = "00:00"

[node name="MaxTime" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1808.0
offset_top = 416.0
offset_right = 1861.0
offset_bottom = 451.0
theme_override_fonts/font = ExtResource("2_6g602")
theme_override_font_sizes/font_size = 32
text = "00:00"

[node name="Pause" type="Button" parent="." groups=["buttons"]]
layout_mode = 0
offset_left = 1248.0
offset_top = 536.0
offset_right = 1312.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("2_6g602")
theme_override_font_sizes/font_size = 48
text = "II"

[node name="Retour" type="Button" parent="."]
offset_left = 1679.0
offset_top = 24.0
offset_right = 1892.0
offset_bottom = 117.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_ypnw8")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_tnj0h")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tnj0h")
theme_override_styles/normal = SubResource("StyleBoxTexture_r0b1q")
text = "RETOUR"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Retour" to="." method="_on_retour_pressed"]
